# web3-js-transactions

./: .env.example  .gitignore  README.md  app.py  go.mod  go.sum  index.ts  main.go  package-lock.json  package.json  requirements.txt  tsconfig.json
java/Web3Transactions/: pom.xml
java/Web3Transactions/src/main/java/com/paramsid/web3trans/: Main.java
java/Web3Transactions/src/test/java/com/paramsid/web3trans/: AppTest.java
rust/: Cargo.toml
rust/src/: main.rs
