[package]
name = "web3-trans"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
web3 = "0.17.0"
dotenv = "0.15.0"
rand = "0.8.5"
hex = "0.4.3"
# ethereum-tx-sign = "6.0.1"
secp256k1 = { version = "0.20.3", features = ["recovery"], optional = true }

[features]
default = ["secp256k1"]